foundation-objs/main/default/objects/Activity/fields/Product_Account__c.field-meta.xml
<CustomField>
    <fullName>Product_Account__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASP/GSP</fullName>
            </value>
            <value>
                <fullName>E-invoicing</fullName>
            </value>
            <value>
                <fullName>E-way Bill</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
            <value>
                <fullName>Airline credit</fullName>
            </value>
            <value>
                <fullName>GSTIN verification</fullName>
            </value>
            <value>
                <fullName>B2C QR code</fullName>
            </value>
            <value>
                <fullName>GSTR 9/9C</fullName>
            </value>
            <value>
                <fullName>Managed Service</fullName>
            </value>
            <value>
                <fullName>Einv + EWB</fullName>
            </value>
            <value>
                <fullName>MAX ITC</fullName>
            </value>
            <value>
                <fullName>Clearone</fullName>
            </value>
            <value>
                <fullName>GSTR 6</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>