foundation-objs/main/default/objects/Activity/fields/Product_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Issue_Type__c</fullName>
    <label>Product Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingestion of Sales/Purchase Data</fullName>
            </value>
            <value>
                <fullName>Filing of GST returns</fullName>
            </value>
            <value>
                <fullName>Generation of E-invoice/Eway bill/B2C QR Code</fullName>
            </value>
            <value>
                <fullName>Download of E-invoice/Eway bill/B2C QR Code</fullName>
            </value>
            <value>
                <fullName>Cancellation of E-invoice/Eway bill/B2C QR Code</fullName>
            </value>
            <value>
                <fullName>Printing of E-invoice/Eway bill/B2C QR Code</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Ingestion</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>