foundation-objs/main/default/objects/Activity/fields/Product_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Text__c</fullName>
    <formula>New_Value_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name Text</label>
    <type>Text</type>
</CustomField>