foundation-objs/main/default/objects/Activity/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>Used across lead and opportunities</description>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scope</valueSetName>
    </valueSet>
</CustomField>