foundation-objs/main/default/objects/Activity/fields/Qualified_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Meeting__c</fullName>
    <description>weather the data was injested from the backend for tracking purpose and can be duplicate record</description>
    <inlineHelpText>Weather Meeting is Accept or Reject by Sales</inlineHelpText>
    <label>Qualified Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>