foundation-objs/main/default/objects/Activity/fields/Reasons_for_reject__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_reject__c</fullName>
    <label>Reasons for reject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>