foundation-objs/main/default/objects/Activity/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <description>Used for asset update record type.</description>
    <label>Related Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>