foundation-objs/main/default/objects/Activity/fields/Source_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Meeting__c</fullName>
    <label>Source of Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SDR Team</fullName>
            </value>
            <value>
                <fullName>MQL Team</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>LeadGen</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Self-generated</fullName>
            </value>
            <value>
                <fullName>Call log</fullName>
                <isActive>false</isActive>
                <label>Call log</label>
            </value>
            <value>
                <fullName>Cross-sell/ Upsell</fullName>
                <isActive>false</isActive>
                <label>Cross-sell/ Upsell</label>
            </value>
            <value>
                <fullName>Health Check/ Business Review</fullName>
                <isActive>false</isActive>
                <label>Health Check/ Business Review</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
                <isActive>false</isActive>
                <label>Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>