foundation-objs/main/default/objects/Activity/fields/Sub_Type_for_Account__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_for_Account__c</fullName>
    <label>Follow Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subject_Only_Account__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EL to be shared/follow up</fullName>
            </value>
            <value>
                <fullName>Pricing Negotiation</fullName>
            </value>
            <value>
                <fullName>Meeting scheduled</fullName>
            </value>
            <value>
                <fullName>Next follow up date</fullName>
            </value>
            <value>
                <fullName>Renewal Closed</fullName>
            </value>
            <value>
                <fullName>Follow up on usage</fullName>
            </value>
            <value>
                <fullName>Product issue/Feature Request</fullName>
            </value>
            <value>
                <fullName>OB completed</fullName>
            </value>
            <value>
                <fullName>Expected Usage start</fullName>
            </value>
            <value>
                <fullName>Expected integration completion</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Training Done</fullName>
            </value>
            <value>
                <fullName>Expected payment on</fullName>
            </value>
            <value>
                <fullName>Invoice issue</fullName>
            </value>
            <value>
                <fullName>Demo scheduled</fullName>
            </value>
            <value>
                <fullName>Deal Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>