foundation-objs/main/default/objects/Activity/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Used across leads/opportunities</description>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Prospecting Call</fullName>
            </value>
            <value>
                <fullName>Introductory Call</fullName>
            </value>
            <value>
                <fullName>Follow up Call</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Send Letter/Quote</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Demo Meeting</fullName>
            </value>
            <value>
                <fullName>POC Meeting</fullName>
            </value>
            <value>
                <fullName>Integration Call</fullName>
            </value>
            <value>
                <fullName>Usage/Churn risk</fullName>
            </value>
            <value>
                <fullName>Onboarding Call</fullName>
            </value>
            <value>
                <fullName>Activation pending</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Support Call</fullName>
            </value>
            <value>
                <fullName>Cash collection</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>Upsell/CrossSell</fullName>
            </value>
            <value>
                <fullName>Health check/Business Review</fullName>
            </value>
            <value>
                <fullName>Closure Meeting</fullName>
            </value>
            <value>
                <fullName>Negotiation Meeting</fullName>
            </value>
            <value>
                <fullName>Followup Meeting</fullName>
            </value>
            <value>
                <fullName>Commercial Discussion Meeting</fullName>
            </value>
            <value>
                <fullName>Demo scheduling Call</fullName>
            </value>
            <value>
                <fullName>Introductory Meeting</fullName>
            </value>
            <value>
                <fullName>Integration-In house Meeting</fullName>
            </value>
            <value>
                <fullName>Other Meetings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>