foundation-objs/main/default/objects/Activity/fields/Subject_Only_Account__c.field-meta.xml
<CustomField>
    <fullName>Subject_Only_Account__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Usage/Churn risk</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Activation pending</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Cash collection</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>Upsell/CrossSell</fullName>
            </value>
            <value>
                <fullName>Health check</fullName>
            </value>
            <value>
                <fullName>Health Check / QBR</fullName>
            </value>
            <value>
                <fullName>Renewal + Cross-sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>