foundation-objs/main/default/objects/Activity/fields/Teams_Demo_Target__c.field-meta.xml
<CustomField>
    <fullName>Teams_Demo_Target__c</fullName>
    <description>This field Will help us calculate the Demo targets at Team Level in the dashboard</description>
    <formula>Owner:User.Individual_Demo_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DemoTarget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>