foundation-objs/main/default/objects/Activity/fields/Type_of_Integration__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Integration__c</fullName>
    <label>Type of Integration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Integration</valueSetName>
    </valueSet>
</CustomField>